--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -30,3 +30,52 @@ input[type=submit] {
     margin: 4px 2px; 
     border-radius: 10px; 
 } 
+.overlay {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 200px;
+    width: 200px;
+    background: gray;
+}
+
+/* Source: w3schools */
+  .slidecontainer {
+    width: 50%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 50%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 35px;
+    border-radius: 0%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 35px;
+    border-radius: 0%;
+    background: #4CAF50;
+    cursor: pointer;
+  }
