Add username to session and add routes for prosumer

--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -12,12 +12,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/slider.js"></script>  
     <script src="js/charts.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/prosumer.js"></script>
   </head>
  
   <body>
     <div class="container" id="navbar">      
-      <h1>Prosumer's Dashboard</h1>
+      <h1><%= message %>'s Dashboard</h1>
       <ul class="nav nav-tabs">
         <li class="nav-item" id="nav-monitor">
           <a class="nav-link active" href="#">Monitor</a>
