image upload functionality now implemented

--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9de6879910.js" crossorigin="anonymous"></script>
     <script src="js/slider.js"></script>  
     <script src="js/charts.js"></script>
     <script src="js/prosumer.js"></script>
@@ -102,11 +103,14 @@
         </div>
 
         <div class="col-sm">
-            <!-- <img src="images/blank-profile.webp" class="img-thumbnail" alt="Profile picture" id="upload-picture"> -->
-            <input type="file" id="fileImg" accept="image/*" onchange="readUrl(this)"/>
-            <textarea id="base"></textarea>
-            <!-- <button type="submit" class="btn btn-primary">Upload picture</button> -->
+          <div class = "img-thumbnail">
+            <i class="far fa-user"></i>
+            <img src="" class="img-thumbnail" alt="Profile picture" id="profileImg">
+          </div>
+          <input type="file" id="fileImg" accept="image/*" onchange="readUrl(this)"/>
+          <span id ="profileMessage"></span>
         </div>
+
 
 
       </div>  
