password update is now handled by graphql, login and sign up are not and should be implemented

--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -85,14 +85,14 @@
         <div class="col-md">
           <form id="update">
             <div class="form-group">
-              <label for="updatePassword">New password</label>
-              <input type="password" class="form-control" name="updatePassword" placeholder="Enter new password">
-
+              <label for="oldPassword">Enter current password</label>
+              <input type="password" class="form-control" name="oldPassword" placeholder="Current password">
             </div>
-
+            
             <div class="form-group">
-              <label for="password">Enter current password</label>
-              <input type="password" class="form-control" name="password" placeholder="Current password">
+              <label for="newPassword">New password</label>
+              <input type="password" class="form-control" name="newPassword" placeholder="Enter new password">
+
             </div>
 
             <button type="submit" class="btn btn-primary">Update</button>
