Fix chart to add current production each tick

--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -50,7 +50,8 @@
         <div class="col-lg">
           <h2>Production</h2>
           <canvas id="chart"></canvas>
-          <script>productionChart();</script>
+          <!--<script>productionChart('#chart');</script>-->
+          <script>let productionChart = new ProsumerChart('#chart');</script>
         </div>
 
       </div>
