added user list on admin dashboard

--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -106,6 +106,7 @@
             <img src="" class="img-thumbnail" alt="Profile picture" id="profileImg">
           </div>
           <input type="file" id="fileImg" accept="image/*" onchange="readUrl(this)"/>
+          <span>Max file size: 5mb</span>
           <span id ="profileMessage"></span>
         </div>
 
