--- a/app/views/manager.ejs
+++ b/app/views/manager.ejs
@@ -51,7 +51,7 @@
 
       </div>
 
-      <h2>Information</h2>
+      <h2>Information and online users</h2>
       <div class="row">
         <!-- Display wind, production etc. as values! -->  
         <div class="col-md">
@@ -61,13 +61,9 @@
             <li>Current modelled market price:</li><span id="price"></span>
           </ul>
         </div>
-
         <div class="col-md">
-          <ul>
-            <li><a href="#">Strandberg</a></li>
-            <li><a href="#">Hakansson</a></li>
-            <li><a href="#">...</a></li>
-          </ul>
+          <ol id="users">
+          </ol>
         </div>
 
       </div>
@@ -75,7 +71,8 @@
 
     <div class="container" id="profile" style="display:none">
       <h2>Profile</h2>
-      <button type="submit" class="btn btn-primary">Delete me!</button>
+      <button type="submit" class="btn btn-primary" onclick="deleteAdmin()">Delete me!</button>
+      <span id="deleteUserMsg"></span>
 
       <div class="row">
 
@@ -101,6 +98,8 @@
           <div class = "img-thumbnail">
             <img src="" class="img-thumbnail" alt="Profile picture" id="profileImg">
           </div>
+          <input type="file" id="fileImg" accept="image/*" onchange="readUrl(this)"/>
+          <span>Max file size: 5mb</span>
           <span id ="profileMessage"></span>
         </div>
       </div>  
