--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -3,28 +3,25 @@
 <html> 
 <head> 
     <title>Login</title> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/signup.js"></script>
 
 </head>
 <body>
      <p>Don't have an account, sign up today!
      <input type="submit" value="Sign Up" onclick = "window.location='/signup';" />    
      </p>
-     <form action="/login" method="post">
+     <form action="/login" method="POST" enctype="multipart/form-data" id="loginForm">
           <div>
                <label>Username:</label>
-               <input type="text" name="username"/>
+               <input id="username" type="text" name="username"/>
           </div>    
           <div>
                <label>Password:</label>
-               <input type="password" name="password"/>
+               <input id="password" type="password" name="password"/>
           </div>
           <div>
-               <input type="submit" value="Log In"
-               <% if (message.length > 0) { %>
-                    <p><%= message %></p>
-               <% } %>  </input>
-                           
-
+               <input type="submit" value="Log In"/>
           </div>
      </form>
 
