--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -2,28 +2,28 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
+     <meta charset="UTF-8" />
     <title>Sign up</title> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/signup.js"></script>
 
 </head>
 <body>
-     <form action="/signup" method="post">
+     <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
           <div>
                <label>Username:</label>
-               <input type="text" name="username"/>
+               <input id="username" type="text" name="username"/>
           </div>    
           <div>
                <label>Password:</label>
-               <input type="password" name="password"/>
+               <input id="password" type="password" name="password"/>
           </div>
           <div>
-               <input type="submit" value="Sign Up" 
-               <% if (message.length > 0) { %>
-                <p><%= message %></p>
-                <% } %>    </input>
+               <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
                           
-
           </div>
      </form>
    
 </body> 
+
 </html>     
