login and signup done with graphql and ajax, auth is done in index.js

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -4,7 +4,7 @@
 <head> 
     <title>Login</title> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/signup.js"></script>
+    <script src="js/login.js"></script>
 
 </head>
 <body>
@@ -21,7 +21,7 @@
                <input id="password" type="password" name="password"/>
           </div>
           <div>
-               <input type="submit" value="Log In"/>
+               <input type="submit" value="Log In"><span id="loginMsg"></span></input>
           </div>
      </form>
 
