--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -37,12 +37,12 @@
           
           <!-- TODO: These sliders should only update after the user no longer clicks on the slider -->
           <p>Use battery ratio</p>
-          <input type="range" min="0" max="100" value=<%= useBatteryRatioDefault %> step="0.5" class="slider" id="useBatteryRatioSlider">
+          <input type="range" min="0" max="100" value="">
           <p>Value: <span id="useBatteryRatioValue"></span>%</p>
           <script>updateSliderVal("useBatteryRatioSlider", "useBatteryRatioValue");</script>
 
           <p>Fill battery ratio</p>
-          <input type="range" min="0" max="100" value=<%= fillBatteryRatioDefault %> step="0.5" class="slider" id="fillBatteryRatioSlider">
+          <input type="range" min="0" max="100" value="">
           <p>Value: <span id="fillBatteryRatioValue"></span>%</p>
           <script>updateSliderVal("fillBatteryRatioSlider", "fillBatteryRatioValue");</script>
  
