--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -80,6 +80,8 @@
 
     <div class="container" id="profile" style="display:none">
       <h2>Profile</h2>
+      <button type="submit" class="btn btn-primary" onclick="deleteUser()">Delete me!</button>
+      <span id="deleteUserMsg"></span>
 
       <div class="row">
 
@@ -115,9 +117,11 @@
       </div>  
 
     </div>
-    <!-- Log out -->
-    <form action="/logout" method="get">
-      <input type="submit" value="Log Out"/>
-    </form>
+    <div class="container">
+      <!-- Log out button -->
+      <form action="/logout" method="get">
+        <input type="submit" class="btn btn-primary" value="Log Out"/>
+      </form>
+    </div>
   </body>
 </html>
