online users are now displayed on manager page, based on express session

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -42,6 +42,8 @@ input[type=submit] {
 }
 
 
+
+/* 
 ol {
     position: absolute;
     top: 20px;
@@ -59,4 +61,4 @@ ol {
     
     -webkit-overflow-scrolling: touch;
   }
-  
+   */
