--- a/app/views/manager.ejs
+++ b/app/views/manager.ejs
@@ -62,7 +62,13 @@
           </ul>
         </div>
         <div class="col-md">
-          <ol id="users">
+          <p>Users</p>
+            <ol id="users">
+            </ol>
+        </div>
+        <div class="col-md">
+          <p>Online</p>
+          <ol id="online">
           </ol>
         </div>
 
