--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -17,7 +17,8 @@
  
   <body>
     <div class="container" id="navbar">      
-      <h1><%= message %>'s Dashboard <span id="timestamp"></span></h1>
+      <h1><%= message %>'s Dashboard</span></h1>
+      <p>Last updated: <span id="timestamp"></span></p>
       <ul class="nav nav-tabs">
         <li class="nav-item" id="nav-monitor">
           <a class="nav-link active" >Monitor</a>
