--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -11,7 +11,7 @@
     font-family: 'Helvetica', serif; 
       
 } 
-input{ 
+/* input{ 
     font-family: 'Helvetica', serif; 
     width: 100%; 
     font-size: 20px; 
@@ -19,7 +19,7 @@ input{
     margin: 8px 0; 
     border: none; 
     border-bottom: 2px solid #767474; 
-} 
+}  */
 input[type=submit] { 
     font-family: 'Helvetica', serif; 
     width: 100%; 
@@ -41,7 +41,60 @@ input[type=submit] {
     background: gray;
 }
 
+/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
 
 /* 
 ol {
