--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -9,7 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/slider.js"></script>  
     <script src="js/charts.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/prosumer.js"></script>
@@ -33,20 +32,21 @@
     <div class="container" id="monitor"> 
       <div class="row">
 
-        <div class="col-md" id="useBatteryRatio" style="width: 100%" display="table">
+        <div class="col-md" style="width: 100%" display="table">
           <h2>Battery settings</h2>
           
-          <!-- TODO: These sliders should only update after the user no longer clicks on the slider -->
-          <p>Use battery ratio</p>
-          <input type="range" min="0" max="100" value="">
-          <p>Value: <span id="useBatteryRatioValue"></span>%</p>
-          <script>updateSliderVal("useBatteryRatioSlider", "useBatteryRatioValue");</script>
+          <div>
+            <p>Use Battery Ratio <input type="text" id="useBatteryRatioText">%<button id="setUseBatteryRatioValue">Set</button></p>
+            <input type="range" id="useBatteryRatioSlider" min="0" max="100" />
+            <p>Value: <span id="useBatteryRatioValue"></span>%</p>
+          </div>
 
-          <p>Fill battery ratio</p>
-          <input type="range" min="0" max="100" value="">
-          <p>Value: <span id="fillBatteryRatioValue"></span>%</p>
-          <script>updateSliderVal("fillBatteryRatioSlider", "fillBatteryRatioValue");</script>
- 
+          <div>
+            <p>Fill Battery Ratio <input type="text" id="fillBatteryRatioText">%<button id="setFillBatteryRatio">Set</button></p>
+            <input type="range" id="fillBatteryRatioSlider" min="0" max="100" />
+            <p>Value: <span id="fillBatteryRatioValue"></span>%</p>
+          </div>
+
         </div>
 
         <div class="col-lg">
@@ -63,17 +63,17 @@
         <!-- Display wind, production etc. as values! -->  
         <div class="col-md">
           <ul>
-            <li>Current wind speed:</li><span id="windspeed"></span>
-            <li>Current production:</li><span id="production"></span>
-            <li>Current consumption:</li><span id="consumption"></span>
+            <li>Current wind speed: <span id="windspeed"></span></li>
+            <li>Current production: <span id="production"></span></li>
+            <li>Current consumption: <span id="consumption"></span></li>
           </ul>
         </div>
 
         <div class="col-md">
           <ul>
-            <li>Net production:</li><span id="netproduction"></span>
-            <li>Battery capacity:</li><span id="batterycap"></span>
-            <li>Market price:</li><span id="marketprice"></span>
+            <li>Net production: <span id="netproduction"></span></li>
+            <li>Battery capacity: <span id="batterycap"></span></li>
+            <li>Market price: <span id="marketprice"></span></li>
           </ul>
         </div>
 
@@ -82,6 +82,7 @@
 
     <div class="container" id="profile" style="display:none">
       <h2>Profile</h2>
+      <input type="password" id="pass" placeholder="Provide your password"> 
       <button type="submit" class="btn btn-primary" onclick="deleteUser()">Delete me!</button>
       <span id="deleteUserMsg"></span>
 
@@ -109,9 +110,11 @@
           <div class = "img-thumbnail">
             <img src="" class="img-thumbnail" alt="Profile picture" id="profileImg">
           </div>
-          <input type="file" id="fileImg" accept="image/*" onchange="readUrl(this)"/>
-          <span>Max file size: 5mb</span>
-          <span id ="profileMessage"></span>
+          <input type="file" id="fileImg" accept="image/jpeg, image/png" onchange="readUrl(this)"/>
+          <div>
+            <span>Only JPEG and PNG! Max file size: 5mb</span>
+            <span id ="profileMessage"></span>
+          </div>
         </div>
 
 
