block prosumer completed, could be improved by displaying more info but basic functionality exists

--- a/app/views/manager.ejs
+++ b/app/views/manager.ejs
@@ -82,16 +82,18 @@
             <li>Current electricity consumption: <span id ="consumption"></span></li>
             <li>Current market demand: <span id="demand"></span></li>
             <li>Current market price: <span id="price"></span></li>
-            <li>Recommended market price <span id="recPrice"></span></li>
+            <li>Recommended market price: <span id="recPrice"></span></li>
           </ul>
         </div>
         <div class="col-md">
-          <p>Users</p>
-            <ol id="users">
-            </ol>
+          <p>Users:</p>
+          <input type=text id="timeBlock" placeholder=Time />
+          <p id="blockInfo"></p>
+          <ol id="users">
+          </ol>
         </div>
         <div class="col-md">
-          <p>Online</p>
+          <p>Online:</p>
           <ol id="online">
           </ol>
         </div>
