--- a/app/views/prosumer.ejs
+++ b/app/views/prosumer.ejs
@@ -25,6 +25,11 @@
         <li class="nav-item" id="nav-profile">
           <a class="nav-link" >Profile</a>
         </li>
+        <li class="nax-item">
+          <form action="/logout" method="get">
+            <input type="submit" class="btn btn-primary" value="Log Out"/>
+          </form>
+        </li>
       </ul>
       <br>
     </div>
@@ -117,16 +122,8 @@
           </div>
         </div>
 
-
-
       </div>  
 
-    </div>
-    <div class="container">
-      <!-- Log out button -->
-      <form action="/logout" method="get">
-        <input type="submit" class="btn btn-primary" value="Log Out"/>
-      </form>
     </div>
   </body>
 </html>
