--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -4,26 +4,40 @@
 <head> 
      <meta charset="UTF-8" />
     <title>Sign up</title> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/signup.js"></script>
 
 </head>
 <body>
-     <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
-          <div>
-               <label>Username:</label>
-               <input id="username" type="text" name="username"/>
-          </div>    
-          <div>
-               <label>Password:</label>
-               <input id="password" type="password" name="password"/>
+     <div class="container">
+          <div class="row justify-content-center align-items-center" style="height:100vh">
+               <div class="col-4">
+                   <div class="card">
+                       <div class="card-body">
+                         <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
+                              <div>
+                                   <label>Username:</label>
+                                   <input id="username" type="text" name="username"/>
+                              </div>    
+                              <div>
+                                   <label>Password:</label>
+                                   <input id="password" type="password" name="password"/>
+                              </div>
+                              <div>
+                                   <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
+                                             
+                              </div>
+                         </form>
+                         </div>
+                   </div>
+               </div>
           </div>
-          <div>
-               <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
-                          
-          </div>
-     </form>
-   
+     </div>
 </body> 
 
 </html>     
