--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -1,29 +1,57 @@
+<!DOCTYPE html>
+<html>
 
-<!DOCTYPE html> 
-<html> 
-<head> 
+<head>
      <meta charset="UTF-8" />
-    <title>Sign up</title> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/signup.js"></script>
+     <title>Sign up</title>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+     </script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+     </script>
+     <script src="js/signup.js"></script>
 
 </head>
-<body>
-     <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
-          <div>
-               <label>Username:</label>
-               <input id="username" type="text" name="username"/>
-          </div>    
-          <div>
-               <label>Password:</label>
-               <input id="password" type="password" name="password"/>
-          </div>
-          <div>
-               <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
-                          
-          </div>
-     </form>
-   
-</body> 
 
-</html>     
+<body>
+     <style>
+          body {
+               background-image: url('images/greenwindpower.jpeg');
+               background-repeat: no-repeat;
+               background-attachment: fixed;
+               background-size: cover;
+          }
+     </style>
+     <div class="container mt-5 p-5">
+          <div class="jumbotron">
+               <h1 class="display-4">GLE Login</h1>
+               <p class="lead">Welcome to Green Lean Electrics! </p>
+               <hr class="my-4">
+               <p>Sign up with your username and password below. By signing up you consent to share your personal
+                    information
+                    such as anything electricity related. And cookies will be stored with non-sensitive data on your
+                    computer. </p>
+               <hr class="my-4">
+
+               <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
+                    <div>
+                         <label>Username:</label>
+                         <input id="username" type="text" name="username" />
+                    </div>
+                    <div>
+                         <label>Password:</label>
+                         <input id="password" type="password" name="password" />
+                    </div>
+                    <div>
+                         <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
+                    </div>
+               </form>
+          </div>
+     </div>
+</body>
+
+</html>
