--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -6,6 +6,7 @@
      <title>Sign up</title>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+     <link rel="stylesheet" href="css/style.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
           integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -26,30 +27,54 @@
                background-size: cover;
           }
      </style>
-     <div class="container">
-          <div class="row justify-content-center align-items-center" style="height:100vh">
-               <div class="col-4">
-                   <div class="card">
-                       <div class="card-body">
-                         <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
-                              <div>
-                                   <label>Username:</label>
-                                   <input id="username" type="text" name="username"/>
-                              </div>    
-                              <div>
-                                   <label>Password:</label>
-                                   <input id="password" type="password" name="password"/>
-                              </div>
-                              <div>
-                                   <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
-                                             
-                              </div>
-                         </form>
-                         </div>
-                   </div>
+
+     <div class="page-header">
+          <div class="container">
+               <div class="row justify-content-center">
+                    <a class="display-4" style="text-decoration: none; color: inherit" href="/">GLE</a>
+                    <a class="font-italic" style="text-decoration: none; color: inherit" href="/">the future is here</a>
                </div>
           </div>
      </div>
+
+     <div class="container">
+          <div class="row justify-content-center align-items-center" style="height:100vh">
+               <div class="col-4">
+                    <div class="card">
+                         <div class="card-body">
+                              <h1 class="display-4">Sign up</h1>
+                              <form action="/signup" method="POST" enctype="multipart/form-data" id="signForm">
+                                   <div class="form-group">
+                                        <label for="username">Username:</label>
+                                        <input class="form-control" id="username" type="text">
+                                   </div>
+                                   <div class="form-group">
+                                        <label for="password">Password:</label>
+                                        <input class="form-control" id="password" type="password">
+                                   </div>
+                                   <div>
+                                        <hr class="my-4">
+                                        <p>By signing up you consent to sharing your personal data such as your household's
+                                           electric information. We may also store cookies on your computer with no sensitive
+                                           information.
+                                        </p>
+                                        <input type="submit" value="Sign Up"><span id="signUpMsg"></span></input>
+                                   </div>
+                              </form>
+                         </div>
+                    </div>
+               </div>
+          </div>
+     </div>
+
+     <footer class="footer">
+          <div class="container">
+               <span class="text-muted">🄯 <script>
+                         new Date().getFullYear() > 2010 && document.write(new Date().getFullYear());
+                    </script> Green Lean Electrics Inc.</span>
+          </div>
+     </footer>
+
 </body>
 
 </html>
