--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -56,3 +56,31 @@ body {
     transform: translateX(26px);
   }
   
+  /* Sticky footer styles from bootstrap.com
+-------------------------------------------------- */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  opacity: 0.8;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+.page-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  opacity: 0.8;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
