Update login and signup page to use headers and footer template

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -18,24 +18,7 @@
 </head>
 
 <body>
-     <style>
-          body {
-               background-image: url('images/greenwindpower.jpeg');
-               background-repeat: no-repeat;
-               background-attachment: fixed;
-               background-size: cover;
-          }
-     </style>
-
-     <div class="page-header">
-          <div class="container">
-               <div class="row justify-content-center">
-                    <a class="display-4" style="text-decoration: none; color: inherit" href="/">GLE</a>
-                    <a class="font-italic" style="text-decoration: none; color: inherit" href="/">the future is here</a>
-               </div>
-          </div>
-     </div>
-
+     <%- include ("homeheader.ejs") %>
      <div class="container">
           <div class="row justify-content-center align-items-center" style="height:100vh">
                <div class="col-4">
@@ -64,15 +47,7 @@
                </div>
           </div>
      </div>
-
-     <footer class="footer">
-          <div class="container">
-               <span class="text-muted">🄯 <script>
-                         new Date().getFullYear() > 2010 && document.write(new Date().getFullYear());
-                    </script> Green Lean Electrics Inc.</span>
-          </div>
-     </footer>
-
+     <%- include ("footer.ejs") %>
 </body>
 
 </html>
