--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -81,6 +81,10 @@ body {
   display: block;
 }
 
-a {
-  text-decoration: none;
+#bg-video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
