--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-     <%- include ("homeheader.ejs") %>
+     <%- include ('homeheader.ejs', { quote: quote }) %>
      <div class="container">
           <div class="row justify-content-center align-items-center" style="height:100vh">
                <div class="col-4">
