--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-     <%- include ("homeheader.ejs") %>
+     <%- include ('homeheader.ejs', { quote: quote}) %>
      <div class="container">
           <div class="row justify-content-center align-items-center" style="height:100vh">
                <div class="col-4">
