--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,5 +1,11 @@
+html {
+  height: 100%;
+}
+
 body {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
@@ -58,15 +64,33 @@ body {
   
   /* Sticky footer styles from bootstrap.com
 -------------------------------------------------- */
-.footer {
-  position: absolute;
+/* .footer {
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  height: -60px;
+  line-height: 60px;
   opacity: 0.8;
   background-color: #f5f5f5;
   text-align: center;
+  display: flex;
+} */
+
+/* .footer {
+  opacity: 0.8;
+  background-color: #f5f5f5;
+  height: 60px;
+  margin-top: -60px;
+  text-align: center;
+  line-height: 60px;
+} */
+
+.footer {
+  opacity: 0.8;
+  background-color: #f5f5f5;
+  text-align: center;
+  line-height: 60px;
+  flex-shrink: 0;
 }
 
 .page-header {
